[gd_scene load_steps=5 format=3 uid="uid://cquiroudqybso"]

[ext_resource type="Theme" uid="uid://d4mfepejhjvvg" path="res://castelet/castelet_default_assets/default_dialogue_rich_text_typesetting.tres" id="1_ruiqs"]
[ext_resource type="Script" path="res://castelet/castelet_core/gui_node/saveload/castelet_save_load_entry_node.gd" id="1_tsra6"]
[ext_resource type="StyleBox" uid="uid://ddl0okwiuo1p0" path="res://castelet/castelet_default_assets/default_choice_button.tres" id="3_wu86m"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_y8h1n"]
size = Vector2(240, 135)

[node name="SaveLoadEntryNode" type="Control"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tsra6")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ruiqs")
theme_override_colors/font_pressed_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_colors/font_focus_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_colors/font_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_styles/normal = ExtResource("3_wu86m")

[node name="SaveDataContainer" type="GridContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ruiqs")
theme_override_constants/h_separation = 20
columns = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Button/SaveDataContainer"]
custom_minimum_size = Vector2(320, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Sprite2D" type="Sprite2D" parent="Button/SaveDataContainer/VBoxContainer2"]
texture = SubResource("PlaceholderTexture2D_y8h1n")
offset = Vector2(160, 90)

[node name="VBoxContainer" type="VBoxContainer" parent="Button/SaveDataContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Button/SaveDataContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/separation = 10

[node name="DataID" type="RichTextLabel" parent="Button/SaveDataContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_ruiqs")
theme_override_colors/default_color = Color(0.160784, 0.054902, 0.0509804, 1)
text = "#0"
scroll_active = false

[node name="HBoxContainer2" type="HBoxContainer" parent="Button/SaveDataContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="DataDate" type="RichTextLabel" parent="Button/SaveDataContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_ruiqs")
theme_override_colors/default_color = Color(0.160784, 0.054902, 0.0509804, 1)
text = "yyyy/mm/dd"

[node name="DataTime" type="RichTextLabel" parent="Button/SaveDataContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_ruiqs")
theme_override_colors/default_color = Color(0.160784, 0.054902, 0.0509804, 1)
text = "HH:MM:SS"

[node name="DataComment" type="RichTextLabel" parent="Button/SaveDataContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ruiqs")
theme_override_colors/default_color = Color(0.160784, 0.054902, 0.0509804, 1)
text = "Save title"
fit_content = true

[connection signal="request_saveload_entry_update" from="." to="." method="_on_request_saveload_entry_update"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
